--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.root.submission2uiux.feature.activity.DetailActivity">
+    tools:context="com.example.root.submission2uiux.menu.activity.DetailActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
