--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,11 +7,11 @@
         <item
             android:id="@+id/nav_now_playing"
             android:icon="@drawable/videocamera"
-            android:title="Now Playing" />
+            android:title="@string/name_fragment_now_playing" />
         <item
             android:id="@+id/nav_upcoming"
             android:icon="@drawable/film"
-            android:title="Up Coming" />
+            android:title="@string/name_fragment_up_coming" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
