--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -2,11 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/search"
-        android:title="Search"
-        android:icon="@drawable/ic_search_black_24dp"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"
-        android:visible="false">
-    </item>
+        android:id="@+id/action_change_settings"
+        android:title="@string/change_language_settings"
+        app:showAsAction="never"></item>
 </menu>
